--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>9D Media</title>
+    <title>9D Medya</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -12,24 +12,24 @@
     <!-- Loading Screen -->
     <div class="loading-screen">
         <div class="loading-content">
-            <div class="loading-logo">9D Media</div>
+            <div class="loading-logo">9D Medya</div>
             <div class="loading-bar"></div>
         </div>
     </div>
 
     <!-- Header -->
     <header>
-        <div class="logo">9D Media</div>
+        <div class="logo">9D Medya</div>
         <div class="menu-btn">
             <span></span>
             <span></span>
             <span></span>
         </div>
         <nav>
-            <a href="#home">Home</a>
-            <a href="#about">About Us</a>
-            <a href="#services">Services</a>
-            <a href="#contact">Contact</a>
+            <a href="#home">Ana Sayfa</a>
+            <a href="#about">Hakkımızda</a>
+            <a href="#services">Hizmetler</a>
+            <a href="#contact">İletişim</a>
         </nav>
     </header>
 
@@ -37,31 +37,31 @@
     <section class="slider">
         <div class="slide active" style="background-image: url('./img_1.jpg');">
             <div class="slide-content">
-                <h2>Experience Cinema</h2>
-                <p>Immerse yourself in the extraordinary world of cinematic storytelling</p>
+                <h2>Sinemayı Deneyimle</h2>
+                <p>Sinematik hikaye anlatımının olağanüstü dünyasına dalın</p>
                 <div class="slide-buttons">
-                    <a href="#" class="slide-btn primary">Watch Now</a>
-                    <a href="#" class="slide-btn secondary">Details</a>
+                    <a href="#" class="slide-btn primary">Şimdi İzle</a>
+                    <a href="#" class="slide-btn secondary">Detaylar</a>
                 </div>
             </div>
         </div>
         <div class="slide" style="background-image: url('./img_2.jpg');">
             <div class="slide-content">
-                <h2>Latest Releases</h2>
-                <p>Discover the newest blockbusters and award-winning films</p>
+                <h2>Son Çıkanlar</h2>
+                <p>En yeni gişe rekorları kıran ve ödüllü filmleri keşfedin</p>
                 <div class="slide-buttons">
-                    <a href="#" class="slide-btn primary">Watch Now</a>
-                    <a href="#" class="slide-btn secondary">Details</a>
+                    <a href="#" class="slide-btn primary">Şimdi İzle</a>
+                    <a href="#" class="slide-btn secondary">Detaylar</a>
                 </div>
             </div>
         </div>
         <div class="slide" style="background-image: url('./img_3.jpg');">
             <div class="slide-content">
-                <h2>Premium Quality</h2>
-                <p>Experience movies in stunning 4K resolution with immersive sound</p>
+                <h2>Premium Kalite</h2>
+                <p>Filmleri 4K çözünürlük ve sürükleyici ses ile deneyimleyin</p>
                 <div class="slide-buttons">
-                    <a href="#" class="slide-btn primary">Watch Now</a>
-                    <a href="#" class="slide-btn secondary">Details</a>
+                    <a href="#" class="slide-btn primary">Şimdi İzle</a>
+                    <a href="#" class="slide-btn secondary">Detaylar</a>
                 </div>
             </div>
         </div>
@@ -69,27 +69,27 @@
 
     <!-- Trending Movies Section -->
     <section class="trending">
-        <h2>Trending Movies</h2>
+        <h2>Trend Filmler</h2>
         <div class="movie-grid">
             <div class="movie">
-                <img src="https://picsum.photos/200/300?random=1" alt="Movie 1">
-                <div class="movie-title">Inception</div>
+                <img src="https://picsum.photos/200/300?random=1" alt="Film 1">
+                <div class="movie-title">Başlangıç</div>
             </div>
             <div class="movie">
-                <img src="https://picsum.photos/200/300?random=2" alt="Movie 2">
-                <div class="movie-title">The Dark Knight</div>
+                <img src="https://picsum.photos/200/300?random=2" alt="Film 2">
+                <div class="movie-title">Kara Şövalye</div>
             </div>
             <div class="movie">
-                <img src="https://picsum.photos/200/300?random=3" alt="Movie 3">
-                <div class="movie-title">Interstellar</div>
+                <img src="https://picsum.photos/200/300?random=3" alt="Film 3">
+                <div class="movie-title">Yıldızlararası</div>
             </div>
             <div class="movie">
-                <img src="https://picsum.photos/200/300?random=4" alt="Movie 4">
-                <div class="movie-title">Pulp Fiction</div>
+                <img src="https://picsum.photos/200/300?random=4" alt="Film 4">
+                <div class="movie-title">Ucuz Roman</div>
             </div>
             <div class="movie">
-                <img src="https://picsum.photos/200/300?random=5" alt="Movie 5">
-                <div class="movie-title">The Matrix</div>
+                <img src="https://picsum.photos/200/300?random=5" alt="Film 5">
+                <div class="movie-title">Matrix</div>
             </div>
         </div>
     </section>
@@ -98,26 +98,26 @@
     <section class="about-us" id="about">
         <div class="about-container">
             <div class="about-content">
-                <h2>About 9D Media</h2>
-                <p>Welcome to the future of entertainment. At 9D Media, we're passionate about delivering extraordinary cinematic experiences that transport you beyond the ordinary. Our cutting-edge technology and curated content selection ensure that every moment you spend with us is nothing short of spectacular.</p>
-                <p>We believe in the power of storytelling and its ability to inspire, educate, and transform. Our platform combines state-of-the-art streaming technology with thoughtfully curated content to bring you the best in entertainment.</p>
+                <h2>9D Medya Hakkında</h2>
+                <p>Eğlencenin geleceğine hoş geldiniz. 9D Medya olarak, sizi sıradanın ötesine taşıyan olağanüstü sinematik deneyimler sunmaktan tutkuluyuz. İleri teknolojimiz ve özenle seçilmiş içerik koleksiyonumuz, bizimle geçirdiğiniz her anın muhteşem olmasını sağlıyor.</p>
+                <p>Hikaye anlatımının gücüne ve onun ilham verme, eğitme ve dönüştürme yeteneğine inanıyoruz. Platformumuz, size en iyi eğlenceyi sunmak için son teknoloji streaming teknolojisini özenle seçilmiş içerikle birleştiriyor.</p>
                 <div class="about-stats">
                     <div class="stat-item">
-                        <div class="stat-number">10K+</div>
-                        <div class="stat-label">Movies</div>
+                        <div class="stat-number">10B+</div>
+                        <div class="stat-label">Film</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-number">5M+</div>
-                        <div class="stat-label">Users</div>
+                        <div class="stat-label">Kullanıcı</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-number">98%</div>
-                        <div class="stat-label">Satisfaction</div>
+                        <div class="stat-label">Memnuniyet</div>
                     </div>
                 </div>
             </div>
             <div class="about-image">
-                <img src="https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="About 9D Media">
+                <img src="https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="9D Medya Hakkında">
             </div>
         </div>
     </section>
@@ -126,42 +126,42 @@
     <section class="contact-section" id="contact">
         <div class="contact-container">
             <div class="contact-content">
-                <h2>Get in Touch</h2>
-                <p>Have questions? We'd love to hear from you. Send us a message and we'll respond as soon as possible.</p>
+                <h2>İletişime Geçin</h2>
+                <p>Sorularınız mı var? Sizden haber almaktan mutluluk duyarız. Bize mesaj gönderin, en kısa sürede yanıt verelim.</p>
                 <div class="contact-info">
                     <div class="info-item">
                         <i class="fas fa-envelope"></i>
-                        <span>info@9dmedia.com</span>
+                        <span>info@9dmedya.com</span>
                     </div>
                     <div class="info-item">
                         <i class="fas fa-phone"></i>
-                        <span>+1 234 567 8900</span>
+                        <span>+90 212 345 6789</span>
                     </div>
                     <div class="info-item">
                         <i class="fas fa-location-dot"></i>
-                        <span>Los Angeles, CA 90001</span>
+                        <span>İstanbul, Türkiye</span>
                     </div>
                 </div>
             </div>
             <form class="contact-form">
                 <div class="form-group">
                     <input type="text" id="name" required>
-                    <label for="name">Your Name</label>
+                    <label for="name">Adınız</label>
                 </div>
                 <div class="form-group">
                     <input type="email" id="email" required>
-                    <label for="email">Your Email</label>
+                    <label for="email">E-posta Adresiniz</label>
                 </div>
                 <div class="form-group">
                     <input type="text" id="subject" required>
-                    <label for="subject">Subject</label>
+                    <label for="subject">Konu</label>
                 </div>
                 <div class="form-group">
                     <textarea id="message" required></textarea>
-                    <label for="message">Your Message</label>
+                    <label for="message">Mesajınız</label>
                 </div>
                 <button type="submit" class="submit-btn">
-                    <span>Send Message</span>
+                    <span>Mesaj Gönder</span>
                     <i class="fas fa-paper-plane"></i>
                 </button>
             </form>
@@ -172,8 +172,8 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-info">
-                <h3>9D Media</h3>
-                <p>Experience the future of entertainment with our cutting-edge streaming platform. Discover, watch, and immerse yourself in a world of extraordinary content.</p>
+                <h3>9D Medya</h3>
+                <p>İleri teknoloji streaming platformumuz ile eğlencenin geleceğini deneyimleyin. Olağanüstü içeriklerle dolu bir dünyayı keşfedin, izleyin ve kendinizi kaptırın.</p>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
@@ -182,35 +182,35 @@
                 </div>
             </div>
             <div class="footer-links">
-                <h4>Quick Links</h4>
+                <h4>Hızlı Bağlantılar</h4>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#home">Ana Sayfa</a></li>
+                    <li><a href="#about">Hakkımızda</a></li>
+                    <li><a href="#services">Hizmetler</a></li>
+                    <li><a href="#contact">İletişim</a></li>
                 </ul>
             </div>
             <div class="footer-links">
-                <h4>Categories</h4>
+                <h4>Kategoriler</h4>
                 <ul>
-                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Aksiyon</a></li>
                     <li><a href="#">Drama</a></li>
-                    <li><a href="#">Comedy</a></li>
-                    <li><a href="#">Documentary</a></li>
+                    <li><a href="#">Komedi</a></li>
+                    <li><a href="#">Belgesel</a></li>
                 </ul>
             </div>
             <div class="footer-links">
-                <h4>Support</h4>
+                <h4>Destek</h4>
                 <ul>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Help Center</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">SSS</a></li>
+                    <li><a href="#">Yardım Merkezi</a></li>
+                    <li><a href="#">Gizlilik Politikası</a></li>
+                    <li><a href="#">Kullanım Şartları</a></li>
                 </ul>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 9D Media. All rights reserved.</p>
+            <p>&copy; 2024 9D Medya. Tüm hakları saklıdır.</p>
         </div>
     </footer>
 
