--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
                 <h3>Filmler</h3>
                 <div class="movie-grid">
                     <div class="movie">
-                        <img src="movie-1.png" alt="Film 1">
-                        <div class="movie-title">Sütçü İmam</div>
+                        <img src="slide-2.jpeg" alt="Film 1">
+                        <div class="movie-title">Momo</div>
                     </div>
                     <div class="movie">
                         <img src="movie-3.jpg" alt="Film 2">
                         <div class="movie-title">Orhan Gazi</div>
                     </div>
                     <div class="movie">
-                        <img src="https://picsum.photos/200/300?random=3" alt="Film 3">
+                        <img src="movie-3.jpg" alt="Film 3">
                         <div class="movie-title">Yıldızlararası</div>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                 <h3>Diziler</h3>
                 <div class="movie-grid">
                     <div class="movie">
-                        <img src="https://picsum.photos/200/300?random=4" alt="Dizi 1">
+                        <img src="series-3.jpg" alt="Dizi 1">
                         <div class="movie-title">Taht Oyunları</div>
                     </div>
                     <div class="movie">
@@ -97,8 +97,11 @@
         <div class="about-container">
             <div class="about-content">
                 <h2>9D Medya Hakkında</h2>
-                <p>Eğlencenin geleceğine hoş geldiniz. 9D Medya olarak, sizi sıradanın ötesine taşıyan olağanüstü sinematik deneyimler sunmaktan tutkuluyuz. İleri teknolojimiz ve özenle seçilmiş içerik koleksiyonumuz, bizimle geçirdiğiniz her anın muhteşem olmasını sağlıyor.</p>
-                <p>Hikaye anlatımının gücüne ve onun ilham verme, eğitme ve dönüştürme yeteneğine inanıyoruz. Platformumuz, size en iyi eğlenceyi sunmak için son teknoloji streaming teknolojisini özenle seçilmiş içerikle birleştiriyor.</p>
+                <p>
+                    2012 yılında Kahramanmaraş Mustafa KARAYER tarafından kurulan firmamız 3D alanında hizmet vermeye başlayarak sektörde ilerlemeye başlamıştır. Çeşitli 2D ve 3D animasyon projelerini üretimini üstlenen 9D Medya ayrıca bu projelerin yanında Mimari görselleştirme projelerine de imza atmıştır. 2015 yılında yapımına başlanan Akıllı Tavşan Momo projesi TRT Çocuk TV’de yayınlanmaya başlamış ve üretimi halen devam etmektedir.</p>
+                <p>Akıllı Tavşan Momo projesinin çocuklar tarafından benimsenmesi ve çok sevilmesi üzerine projenin sinema filminin çalışmalarına başlanmış ve avrupa standartlarında üretimi için faaliyetlerine başlamıştır. Hali hazırda devam eden sinema filminin üretimi için yurtiçi ve yurtdışından çok sayıda alanında uzman kadrolarla üretim süreci devam etmektedir.
+
+                </p>
                 <div class="about-stats">
                     <div class="stat-item">
                         <div class="stat-number">10B+</div>
