--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
     <!-- Loading Screen -->
     <div class="loading-screen">
         <div class="loading-content">
-            <div class="loading-logo">9D Medya</div>
+            <div class="loading-logo">
+                <span class="logo-number">9</span><span class="logo-letter">D</span><span class="logo-text">Medya</span>
+            </div>
             <div class="loading-bar"></div>
         </div>
     </div>
 
     <!-- Header -->
     <header>
-        <div class="logo">9D Medya</div>
+        <div class="logo"><span class="logo-number">9</span><span class="logo-letter">D</span><span class="logo-text">Medya</span></div>
         <div class="menu-btn">
             <span></span>
             <span></span>
@@ -99,7 +101,7 @@
                 <h2>9D Medya Hakkında</h2>
                 <p>
                     2012 yılında Kahramanmaraş Mustafa KARAYER tarafından kurulan firmamız 3D alanında hizmet vermeye başlayarak sektörde ilerlemeye başlamıştır. Çeşitli 2D ve 3D animasyon projelerini üretimini üstlenen 9D Medya ayrıca bu projelerin yanında Mimari görselleştirme projelerine de imza atmıştır. 2015 yılında yapımına başlanan Akıllı Tavşan Momo projesi TRT Çocuk TV’de yayınlanmaya başlamış ve üretimi halen devam etmektedir.</p>
-                <p>Akıllı Tavşan Momo projesinin çocuklar tarafından benimsenmesi ve çok sevilmesi üzerine projenin sinema filminin çalışmalarına başlanmış ve avrupa standartlarında üretimi için faaliyetlerine başlamıştır. Hali hazırda devam eden sinema filminin üretimi için yurtiçi ve yurtdışından çok sayıda alanında uzman kadrolarla üretim süreci devam etmektedir.
+                <p>Akıllı Tavşan Momo projesinin çocuklar tarafından benimsenmesi ve çok sevilmesi üzerine projenin sinema filminin çalışmalarına başlanmış ve avrupa standartlarında üretimi için faaliyetlerine başlamıştır. Hali hazırda devam eden sinema filminin üretimi için yurtiçi ve yurtdışından ok sayıda alanında uzman kadrolarla üretim süreci devam etmektedir.
 
                 </p>
                 <div class="about-stats">
@@ -173,7 +175,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-info">
-                <h3>9D Medya</h3>
+                <h3><span class="logo-number">9</span><span class="logo-letter">D</span><span class="logo-text">Medya</span></h3>
                 <p>İleri teknoloji streaming platformumuz ile eğlencenin geleceğini deneyimleyin. Olağanüstü içeriklerle dolu bir dünyayı keşfedin, izleyin ve kendinizi kaptırın.</p>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
