--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="slide active">
             <div class="video-background">
                 <video autoplay muted loop playsinline>
-                    <source src="slider-1.mp4" type="video/mp4">
+                    <source src="slider.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
